Lab02 - classes d'equivalence, DateTest, DateNextDateOkTest, DateNextDateExceptionTest